--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Silvia Pintus",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "popups": "^1.1.3"
   }
 }
